calc3.output
Terminals unused in grammar

    FLOAT


State 34 conflicts: 20 shift/reduce
State 35 conflicts: 20 shift/reduce
State 36 conflicts: 3 shift/reduce
State 79 conflicts: 3 shift/reduce
State 80 conflicts: 3 shift/reduce
State 81 conflicts: 3 shift/reduce
State 82 conflicts: 3 shift/reduce
State 83 conflicts: 3 shift/reduce
State 84 conflicts: 3 shift/reduce
State 85 conflicts: 3 shift/reduce
State 86 conflicts: 3 shift/reduce
State 87 conflicts: 3 shift/reduce
State 88 conflicts: 3 shift/reduce
State 89 conflicts: 3 shift/reduce
State 90 conflicts: 3 shift/reduce
State 91 conflicts: 3 shift/reduce
State 92 conflicts: 3 shift/reduce
State 93 conflicts: 3 shift/reduce
State 94 conflicts: 3 shift/reduce
State 95 conflicts: 3 shift/reduce
State 96 conflicts: 20 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function

    2 function: function stmt
    3         | %empty

    4 stmt: ';'
    5     | expr ';'
    6     | WRITE expr ';'
    7     | VARIABLE '=' expr ';'
    8     | VARIABLE ADD_ASSIGN expr ';'
    9     | VARIABLE SUB_ASSIGN expr ';'
   10     | VARIABLE MUL_ASSIGN expr ';'
   11     | VARIABLE DIV_ASSIGN expr ';'
   12     | VARIABLE MOD_ASSIGN expr ';'
   13     | VARIABLE AND_ASSIGN expr ';'
   14     | VARIABLE OR_ASSIGN expr ';'
   15     | VARIABLE XOR_ASSIGN expr ';'
   16     | VARIABLE LSHIFT_ASSIGN expr ';'
   17     | VARIABLE RSHIFT_ASSIGN expr ';'
   18     | WHILE '(' expr ')' stmt
   19     | IF '(' expr ')' stmt
   20     | IF '(' expr ')' stmt ELSE stmt
   21     | FOR '(' stmt expr_opt ';' expr_opt ')' stmt
   22     | '{' stmt_list '}'

   23 stmt_list: stmt
   24          | stmt_list stmt

   25 expr_opt: %empty
   26         | expr

   27 expr: INTEGER
   28     | VARIABLE
   29     | '-' expr
   30     | expr '+' expr
   31     | INC expr
   32     | DEC expr
   33     | expr INC
   34     | expr DEC
   35     | expr '-' expr
   36     | expr '*' expr
   37     | expr '/' expr
   38     | expr '%' expr
   39     | expr '<' expr
   40     | expr '>' expr
   41     | expr '&' expr
   42     | expr '|' expr
   43     | expr '^' expr
   44     | expr LSHIFT expr
   45     | expr RSHIFT expr
   46     | expr AND expr
   47     | expr OR expr
   48     | expr GE expr
   49     | expr LE expr
   50     | expr NE expr
   51     | expr EQ expr
   52     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 38
    '&' (38) 41
    '(' (40) 18 19 20 21 52
    ')' (41) 18 19 20 21 52
    '*' (42) 36
    '+' (43) 30
    '-' (45) 29 35
    '/' (47) 37
    ';' (59) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 21
    '<' (60) 39
    '=' (61) 7
    '>' (62) 40
    '^' (94) 43
    '{' (123) 22
    '|' (124) 42
    '}' (125) 22
    error (256)
    INTEGER <iValue> (258) 27
    FLOAT <dValue> (259)
    VARIABLE <sIndex> (260) 7 8 9 10 11 12 13 14 15 16 17 28
    WHILE (261) 18
    IF (262) 19 20
    WRITE (263) 6
    FOR (264) 21
    INC (265) 31 33
    DEC (266) 32 34
    LSHIFT (267) 44
    RSHIFT (268) 45
    AND (269) 46
    OR (270) 47
    ADD_ASSIGN (271) 8
    SUB_ASSIGN (272) 9
    MUL_ASSIGN (273) 10
    DIV_ASSIGN (274) 11
    MOD_ASSIGN (275) 12
    AND_ASSIGN (276) 13
    OR_ASSIGN (277) 14
    XOR_ASSIGN (278) 15
    LSHIFT_ASSIGN (279) 16
    RSHIFT_ASSIGN (280) 17
    IFX (281)
    ELSE (282) 20
    GE (283) 48
    LE (284) 49
    EQ (285) 51
    NE (286) 50
    UMINUS (287)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    function (51)
        on left: 2 3
        on right: 1 2
    stmt <nPtr> (52)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 2 18 19 20 21 23 24
    stmt_list <nPtr> (53)
        on left: 23 24
        on right: 22 24
    expr_opt <nPtr> (54)
        on left: 25 26
        on right: 21
    expr <nPtr> (55)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 26 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (function)

    program   go to state 1
    function  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: function .
    2 function: function . stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    WRITE     shift, and go to state 8
    FOR       shift, and go to state 9
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    ';'       shift, and go to state 13
    '('       shift, and go to state 14
    '{'       shift, and go to state 15

    $default  reduce using rule 1 (program)

    stmt  go to state 16
    expr  go to state 17


State 3

    0 $accept: program $end .

    $default  accept


State 4

   27 expr: INTEGER .

    $default  reduce using rule 27 (expr)


State 5

    7 stmt: VARIABLE . '=' expr ';'
    8     | VARIABLE . ADD_ASSIGN expr ';'
    9     | VARIABLE . SUB_ASSIGN expr ';'
   10     | VARIABLE . MUL_ASSIGN expr ';'
   11     | VARIABLE . DIV_ASSIGN expr ';'
   12     | VARIABLE . MOD_ASSIGN expr ';'
   13     | VARIABLE . AND_ASSIGN expr ';'
   14     | VARIABLE . OR_ASSIGN expr ';'
   15     | VARIABLE . XOR_ASSIGN expr ';'
   16     | VARIABLE . LSHIFT_ASSIGN expr ';'
   17     | VARIABLE . RSHIFT_ASSIGN expr ';'
   28 expr: VARIABLE .

    ADD_ASSIGN     shift, and go to state 18
    SUB_ASSIGN     shift, and go to state 19
    MUL_ASSIGN     shift, and go to state 20
    DIV_ASSIGN     shift, and go to state 21
    MOD_ASSIGN     shift, and go to state 22
    AND_ASSIGN     shift, and go to state 23
    OR_ASSIGN      shift, and go to state 24
    XOR_ASSIGN     shift, and go to state 25
    LSHIFT_ASSIGN  shift, and go to state 26
    RSHIFT_ASSIGN  shift, and go to state 27
    '='            shift, and go to state 28

    $default  reduce using rule 28 (expr)


State 6

   18 stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 29


State 7

   19 stmt: IF . '(' expr ')' stmt
   20     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 30


State 8

    6 stmt: WRITE . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 32


State 9

   21 stmt: FOR . '(' stmt expr_opt ';' expr_opt ')' stmt

    '('  shift, and go to state 33


State 10

   31 expr: INC . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 34


State 11

   32 expr: DEC . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 35


State 12

   29 expr: '-' . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 36


State 13

    4 stmt: ';' .

    $default  reduce using rule 4 (stmt)


State 14

   52 expr: '(' . expr ')'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 37


State 15

   22 stmt: '{' . stmt_list '}'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    WRITE     shift, and go to state 8
    FOR       shift, and go to state 9
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    ';'       shift, and go to state 13
    '('       shift, and go to state 14
    '{'       shift, and go to state 15

    stmt       go to state 38
    stmt_list  go to state 39
    expr       go to state 17


State 16

    2 function: function stmt .

    $default  reduce using rule 2 (function)


State 17

    5 stmt: expr . ';'
   30 expr: expr . '+' expr
   33     | expr . INC
   34     | expr . DEC
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . '%' expr
   39     | expr . '<' expr
   40     | expr . '>' expr
   41     | expr . '&' expr
   42     | expr . '|' expr
   43     | expr . '^' expr
   44     | expr . LSHIFT expr
   45     | expr . RSHIFT expr
   46     | expr . AND expr
   47     | expr . OR expr
   48     | expr . GE expr
   49     | expr . LE expr
   50     | expr . NE expr
   51     | expr . EQ expr

    INC     shift, and go to state 40
    DEC     shift, and go to state 41
    LSHIFT  shift, and go to state 42
    RSHIFT  shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    GE      shift, and go to state 46
    LE      shift, and go to state 47
    EQ      shift, and go to state 48
    NE      shift, and go to state 49
    '>'     shift, and go to state 50
    '<'     shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    '&'     shift, and go to state 56
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    ';'     shift, and go to state 59
    '%'     shift, and go to state 60


State 18

    8 stmt: VARIABLE ADD_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 61


State 19

    9 stmt: VARIABLE SUB_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 62


State 20

   10 stmt: VARIABLE MUL_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 63


State 21

   11 stmt: VARIABLE DIV_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 64


State 22

   12 stmt: VARIABLE MOD_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 65


State 23

   13 stmt: VARIABLE AND_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 66


State 24

   14 stmt: VARIABLE OR_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 67


State 25

   15 stmt: VARIABLE XOR_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 68


State 26

   16 stmt: VARIABLE LSHIFT_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 69


State 27

   17 stmt: VARIABLE RSHIFT_ASSIGN . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 70


State 28

    7 stmt: VARIABLE '=' . expr ';'

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 71


State 29

   18 stmt: WHILE '(' . expr ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 72


State 30

   19 stmt: IF '(' . expr ')' stmt
   20     | IF '(' . expr ')' stmt ELSE stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 73


State 31

   28 expr: VARIABLE .

    $default  reduce using rule 28 (expr)


State 32

    6 stmt: WRITE expr . ';'
   30 expr: expr . '+' expr
   33     | expr . INC
   34     | expr . DEC
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . '%' expr
   39     | expr . '<' expr
   40     | expr . '>' expr
   41     | expr . '&' expr
   42     | expr . '|' expr
   43     | expr . '^' expr
   44     | expr . LSHIFT expr
   45     | expr . RSHIFT expr
   46     | expr . AND expr
   47     | expr . OR expr
   48     | expr . GE expr
   49     | expr . LE expr
   50     | expr . NE expr
   51     | expr . EQ expr

    INC     shift, and go to state 40
    DEC     shift, and go to state 41
    LSHIFT  shift, and go to state 42
    RSHIFT  shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    GE      shift, and go to state 46
    LE      shift, and go to state 47
    EQ      shift, and go to state 48
    NE      shift, and go to state 49
    '>'     shift, and go to state 50
    '<'     shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    '&'     shift, and go to state 56
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    ';'     shift, and go to state 74
    '%'     shift, and go to state 60


State 33

   21 stmt: FOR '(' . stmt expr_opt ';' expr_opt ')' stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    WRITE     shift, and go to state 8
    FOR       shift, and go to state 9
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    ';'       shift, and go to state 13
    '('       shift, and go to state 14
    '{'       shift, and go to state 15

    stmt  go to state 75
    expr  go to state 17


State 34

   30 expr: expr . '+' expr
   31     | INC expr .
   33     | expr . INC
   34     | expr . DEC
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . '%' expr
   39     | expr . '<' expr
   40     | expr . '>' expr
   41     | expr . '&' expr
   42     | expr . '|' expr
   43     | expr . '^' expr
   44     | expr . LSHIFT expr
   45     | expr . RSHIFT expr
   46     | expr . AND expr
   47     | expr . OR expr
   48     | expr . GE expr
   49     | expr . LE expr
   50     | expr . NE expr
   51     | expr . EQ expr

    INC     shift, and go to state 40
    DEC     shift, and go to state 41
    LSHIFT  shift, and go to state 42
    RSHIFT  shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    GE      shift, and go to state 46
    LE      shift, and go to state 47
    EQ      shift, and go to state 48
    NE      shift, and go to state 49
    '>'     shift, and go to state 50
    '<'     shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    '&'     shift, and go to state 56
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '%'     shift, and go to state 60

    INC       [reduce using rule 31 (expr)]
    DEC       [reduce using rule 31 (expr)]
    LSHIFT    [reduce using rule 31 (expr)]
    RSHIFT    [reduce using rule 31 (expr)]
    AND       [reduce using rule 31 (expr)]
    OR        [reduce using rule 31 (expr)]
    GE        [reduce using rule 31 (expr)]
    LE        [reduce using rule 31 (expr)]
    EQ        [reduce using rule 31 (expr)]
    NE        [reduce using rule 31 (expr)]
    '>'       [reduce using rule 31 (expr)]
    '<'       [reduce using rule 31 (expr)]
    '+'       [reduce using rule 31 (expr)]
    '-'       [reduce using rule 31 (expr)]
    '*'       [reduce using rule 31 (expr)]
    '/'       [reduce using rule 31 (expr)]
    '&'       [reduce using rule 31 (expr)]
    '|'       [reduce using rule 31 (expr)]
    '^'       [reduce using rule 31 (expr)]
    '%'       [reduce using rule 31 (expr)]
    $default  reduce using rule 31 (expr)


State 35

   30 expr: expr . '+' expr
   32     | DEC expr .
   33     | expr . INC
   34     | expr . DEC
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . '%' expr
   39     | expr . '<' expr
   40     | expr . '>' expr
   41     | expr . '&' expr
   42     | expr . '|' expr
   43     | expr . '^' expr
   44     | expr . LSHIFT expr
   45     | expr . RSHIFT expr
   46     | expr . AND expr
   47     | expr . OR expr
   48     | expr . GE expr
   49     | expr . LE expr
   50     | expr . NE expr
   51     | expr . EQ expr

    INC     shift, and go to state 40
    DEC     shift, and go to state 41
    LSHIFT  shift, and go to state 42
    RSHIFT  shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    GE      shift, and go to state 46
    LE      shift, and go to state 47
    EQ      shift, and go to state 48
    NE      shift, and go to state 49
    '>'     shift, and go to state 50
    '<'     shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    '&'     shift, and go to state 56
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '%'     shift, and go to state 60

    INC       [reduce using rule 32 (expr)]
    DEC       [reduce using rule 32 (expr)]
    LSHIFT    [reduce using rule 32 (expr)]
    RSHIFT    [reduce using rule 32 (expr)]
    AND       [reduce using rule 32 (expr)]
    OR        [reduce using rule 32 (expr)]
    GE        [reduce using rule 32 (expr)]
    LE        [reduce using rule 32 (expr)]
    EQ        [reduce using rule 32 (expr)]
    NE        [reduce using rule 32 (expr)]
    '>'       [reduce using rule 32 (expr)]
    '<'       [reduce using rule 32 (expr)]
    '+'       [reduce using rule 32 (expr)]
    '-'       [reduce using rule 32 (expr)]
    '*'       [reduce using rule 32 (expr)]
    '/'       [reduce using rule 32 (expr)]
    '&'       [reduce using rule 32 (expr)]
    '|'       [reduce using rule 32 (expr)]
    '^'       [reduce using rule 32 (expr)]
    '%'       [reduce using rule 32 (expr)]
    $default  reduce using rule 32 (expr)


State 36

   29 expr: '-' expr .
   30     | expr . '+' expr
   33     | expr . INC
   34     | expr . DEC
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . '%' expr
   39     | expr . '<' expr
   40     | expr . '>' expr
   41     | expr . '&' expr
   42     | expr . '|' expr
   43     | expr . '^' expr
   44     | expr . LSHIFT expr
   45     | expr . RSHIFT expr
   46     | expr . AND expr
   47     | expr . OR expr
   48     | expr . GE expr
   49     | expr . LE expr
   50     | expr . NE expr
   51     | expr . EQ expr

    INC  shift, and go to state 40
    DEC  shift, and go to state 41
    '%'  shift, and go to state 60

    INC       [reduce using rule 29 (expr)]
    DEC       [reduce using rule 29 (expr)]
    '%'       [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)


State 37

   30 expr: expr . '+' expr
   33     | expr . INC
   34     | expr . DEC
   35     | expr . '-' expr
   36     | expr . '*' expr
   37     | expr . '/' expr
   38     | expr . '%' expr
   39     | expr . '<' expr
   40     | expr . '>' expr
   41     | expr . '&' expr
   42     | expr . '|' expr
   43     | expr . '^' expr
   44     | expr . LSHIFT expr
   45     | expr . RSHIFT expr
   46     | expr . AND expr
   47     | expr . OR expr
   48     | expr . GE expr
   49     | expr . LE expr
   50     | expr . NE expr
   51     | expr . EQ expr
   52     | '(' expr . ')'

    INC     shift, and go to state 40
    DEC     shift, and go to state 41
    LSHIFT  shift, and go to state 42
    RSHIFT  shift, and go to state 43
    AND     shift, and go to state 44
    OR      shift, and go to state 45
    GE      shift, and go to state 46
    LE      shift, and go to state 47
    EQ      shift, and go to state 48
    NE      shift, and go to state 49
    '>'     shift, and go to state 50
    '<'     shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    '&'     shift, and go to state 56
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    ')'     shift, and go to state 76
    '%'     shift, and go to state 60


State 38

   23 stmt_list: stmt .

    $default  reduce using rule 23 (stmt_list)


State 39

   22 stmt: '{' stmt_list . '}'
   24 stmt_list: stmt_list . stmt

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 5
    WHILE     shift, and go to state 6
    IF        shift, and go to state 7
    WRITE     shift, and go to state 8
    FOR       shift, and go to state 9
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    ';'       shift, and go to state 13
    '('       shift, and go to state 14
    '{'       shift, and go to state 15
    '}'       shift, and go to state 77

    stmt  go to state 78
    expr  go to state 17


State 40

   33 expr: expr INC .

    $default  reduce using rule 33 (expr)


State 41

   34 expr: expr DEC .

    $default  reduce using rule 34 (expr)


State 42

   44 expr: expr LSHIFT . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 79


State 43

   45 expr: expr RSHIFT . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 80


State 44

   46 expr: expr AND . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 81


State 45

   47 expr: expr OR . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 82


State 46

   48 expr: expr GE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 83


State 47

   49 expr: expr LE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 84


State 48

   51 expr: expr EQ . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 85


State 49

   50 expr: expr NE . expr

    INTEGER   shift, and go to state 4
    VARIABLE  shift, and go to state 31
    INC       shift, and go to state 10
    DEC       shift, and go to state 11
    '-'       shift, and go to state 12
    '('       shift, and go to state 14

    expr  go to state 86


State 50

   40 expr: expr '>' . expr
